@@ -110,7 +110,7 @@ public class CalloutTimeExpense extends CalloutEngine
 					if (priceActual == null)
 						priceActual = rs.getBigDecimal("PriceLimit");
 					//	Currency
-					Integer ii = new Integer(rs.getInt("C_Currency_ID"));
+					Integer ii = Integer.valueOf(rs.getInt("C_Currency_ID"));
 					if (!rs.wasNull())
 						mTab.setValue("C_Currency_ID", ii);
 				}
@@ -155,7 +155,7 @@ public class CalloutTimeExpense extends CalloutEngine
 						if (priceActual == null)
 							priceActual = rs.getBigDecimal("PriceLimit");
 						//	Currency
-						Integer ii = new Integer(rs.getInt("C_Currency_ID"));
+						Integer ii = Integer.valueOf(rs.getInt("C_Currency_ID"));
 						if (!rs.wasNull())
 							mTab.setValue("C_Currency_ID", ii);
 					}
