@@ -20,6 +20,7 @@ import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Iterator;
+import java.util.Map;
 import java.util.logging.Level;
 
 import org.compiere.model.MAccount;
@@ -337,22 +338,10 @@ public final class Fact
 	 */
 	public boolean isSegmentBalanced()
 	{
-		//AZ Goodwill
-		//  Multi-Currency documents are source balanced by definition
 		//  No lines -> balanced
-		if (m_lines.size() == 0 || m_doc.isMultiCurrency())
+		if (m_lines.size() == 0)
 			return true;
 		
-		// If there is more than 1 currency in fact lines, it is a multi currency doc
-		ArrayList<Integer> list = new ArrayList<Integer>();
-		for (int i = 0; i < m_lines.size(); i++){
-			FactLine line = (FactLine)m_lines.get(i);
-			if (line.getC_Currency_ID() > 0 && !list.contains(line.getC_Currency_ID()))
-				list.add(line.getC_Currency_ID());
-		}
-		if (list.size() > 1 )
-			return true;
-			
 		MAcctSchemaElement[] elements = m_acctSchema.getAcctSchemaElements();
 		//  check all balancing segments
 		for (int i = 0; i < elements.length; i++)
@@ -376,31 +365,34 @@ public final class Fact
 		if (segmentType.equals(MAcctSchemaElement.ELEMENTTYPE_Organization))
 		{
 			HashMap<Integer,BigDecimal> map = new HashMap<Integer,BigDecimal>();
-			//  Add up values by key
+			//  Add up values by organization
 			for (int i = 0; i < m_lines.size(); i++)
 			{
 				FactLine line = (FactLine)m_lines.get(i);
-				Integer key = new Integer(line.getAD_Org_ID());
+				Integer key = Integer.valueOf(line.getAD_Org_ID());
 				BigDecimal bal = line.getSourceBalance();
 				BigDecimal oldBal = (BigDecimal)map.get(key);
 				if (oldBal != null)
 					bal = bal.add(oldBal);
 				map.put(key, bal);
-			//	System.out.println("Add Key=" + key + ", Bal=" + bal + " <- " + line);
 			}
-			//  check if all keys are zero
-			Iterator<BigDecimal> values = map.values().iterator();
-			while (values.hasNext())
+			
+			//  check if there are not balance entries involving multiple organizations
+			Map<Integer, BigDecimal> notBalance = new HashMap<>();			
+			for(Map.Entry<Integer, BigDecimal> entry : map.entrySet())
 			{
-				BigDecimal bal = values.next();
+				BigDecimal bal = entry.getValue();
 				if (bal.signum() != 0)
 				{
-					map.clear();
-					log.warning ("(" + segmentType + ") NO - " + toString() + ", Balance=" + bal);
-					return false;
+					notBalance.put(entry.getKey(), entry.getValue());
 				}
 			}
-			map.clear();
+			
+			if (notBalance.size() > 1)
+			{
+				return false;
+			}
+			
 			if (log.isLoggable(Level.FINER)) log.finer("(" + segmentType + ") - " + toString());
 			return true;
 		}
@@ -447,7 +439,7 @@ public final class Fact
 			for (int i = 0; i < m_lines.size(); i++)
 			{
 				FactLine line = (FactLine)m_lines.get(i);
-				Integer key = new Integer(line.getAD_Org_ID());
+				Integer key = Integer.valueOf(line.getAD_Org_ID());
 			//	BigDecimal balance = line.getSourceBalance();
 				Balance oldBalance = (Balance)map.get(key);
 				if (oldBalance == null)
