@@ -48,7 +48,7 @@ public class GridFieldVO implements Serializable
 	/**
 	 * 
 	 */
-	private static final long serialVersionUID = 5633655630654835665L;
+	private static final long serialVersionUID = -1752172363171842152L;
 
 	/**
 	 *  Return the SQL statement used for the MFieldVO.create
@@ -214,7 +214,7 @@ public class GridFieldVO implements Serializable
 					vo.ValidationCode = rs.getString(i);
 				else if (columnName.equalsIgnoreCase("ColumnSQL")) {
 					vo.ColumnSQL = rs.getString(i);
-					if (vo.ColumnSQL != null && vo.ColumnSQL.contains("@")) {
+					if (vo.ColumnSQL != null && !vo.ColumnSQL.startsWith("@SQL=") && vo.ColumnSQL.contains("@")) {
 						// NOTE: cannot use window context because this is set globally on the query, not per record
 						vo.ColumnSQL = Env.parseContext(ctx, -1, vo.ColumnSQL, false, true);
 					}
@@ -250,6 +250,10 @@ public class GridFieldVO implements Serializable
 					vo.PA_DashboardContent_ID = rs.getInt (i);
 				else if (columnName.equalsIgnoreCase("IsIdentifier"))
 					vo.IsIdentifier = "Y".equals(rs.getString(i));
+				else if (columnName.equalsIgnoreCase("placeholder"))
+					vo.Placeholder = rs.getString(i);
+				else if (columnName.equalsIgnoreCase("IsHtml"))
+					vo.IsHtml = "Y".equals(rs.getString(i));
 			}
 			if (vo.Header == null)
 				vo.Header = vo.ColumnName;
@@ -341,6 +345,9 @@ public class GridFieldVO implements Serializable
 
 			if (userDef.getPA_DashboardContent_ID() > 0)
 				vo.PA_DashboardContent_ID = userDef.getPA_DashboardContent_ID();
+
+				if (userDef.getPlaceholder() != null)
+					vo.Placeholder = userDef.getPlaceholder();
 			// F3P: new fields
 
 			if(userDef.getAD_FieldGroup_ID() > 0)
@@ -430,6 +437,8 @@ public class GridFieldVO implements Serializable
 			vo.DisplayLogic= rs.getString("DisplayLogic");
 			vo.IsEncryptedField=rs.getString("IsEncrypted").equals("Y");
 			vo.MandatoryLogic = rs.getString("MandatoryLogic");
+			vo.Placeholder = rs.getString("Placeholder");
+			vo.Placeholder2 = rs.getString("Placeholder2");
 		}
 		catch (SQLException e)
 		{
@@ -439,6 +448,9 @@ public class GridFieldVO implements Serializable
 		vo.initFinish();
 		if (vo.DefaultValue2 == null)
 			vo.DefaultValue2 = "";
+		if (vo.Placeholder2 == null)
+			vo.Placeholder2 = "";
+
 		return vo;
 	}   //  createParameter
 
@@ -467,6 +479,7 @@ public class GridFieldVO implements Serializable
 		voT.FieldLength = voF.FieldLength;
 		voT.DisplayLength = voF.FieldLength;
 		voT.DefaultValue = voF.DefaultValue2;
+		voT.Placeholder2 = voF.Placeholder2;
 		voT.VFormat = voF.VFormat;
 		voT.FormatPattern = voF.FormatPattern;
 		voT.ValueMin = voF.ValueMin;
@@ -502,7 +515,7 @@ public class GridFieldVO implements Serializable
 	 */
 	public static GridFieldVO createParameter (Properties ctx, int WindowNo, int WindowIDOfPanel, int infoWindowID,
 			int AD_Column_ID, String ColumnName, String Name, int AD_Reference_ID, int AD_Reference_Value_ID, 
-			boolean IsMandatory, boolean IsEncrypted)
+			boolean IsMandatory, boolean IsEncrypted, String Placeholder)
 	{
 		GridFieldVO vo = new GridFieldVO (ctx, WindowNo, 0, 0, 0, false);
 		vo.isProcess = true;
@@ -519,6 +532,7 @@ public class GridFieldVO implements Serializable
 		vo.IsEncryptedField= IsEncrypted;			
 		vo.AD_Infowindow_ID = infoWindowID;
 		vo.AD_Window_ID_Of_Panel = WindowIDOfPanel;
+		vo.Placeholder = Placeholder;
 		//
 		vo.initFinish();
 		return vo;
@@ -735,8 +749,13 @@ public class GridFieldVO implements Serializable
 	public int AD_FieldStyle_ID = 0;
 	
 	public int PA_DashboardContent_ID = 0;
-	
+
 	public boolean IsIdentifier = false; //LS added attribute, may be useful
+	
+	public String Placeholder = "";
+	public String Placeholder2 = "";
+	/* Is HTML String */
+	public boolean		IsHtml = false;
 	
 	/**
 	 *  Set Context including contained elements
@@ -773,6 +792,8 @@ public class GridFieldVO implements Serializable
 			ReadOnlyLogic = "";
 		if (MandatoryLogic == null)
 			MandatoryLogic = "";
+		if (Placeholder == null)
+			Placeholder = "";
 
 
 		//  Create Lookup, if not ID
@@ -871,6 +892,8 @@ public class GridFieldVO implements Serializable
 		clone.AD_LabelStyle_ID = AD_LabelStyle_ID;
 		clone.PA_DashboardContent_ID = PA_DashboardContent_ID;
 		clone.IsIdentifier = IsIdentifier;
+		clone.Placeholder = Placeholder;
+		clone.IsHtml = IsHtml;
 		
 		//	Lookup
 		clone.ValidationCode = ValidationCode;
@@ -880,6 +903,7 @@ public class GridFieldVO implements Serializable
 		//  Process Parameter
 		clone.isRange = isRange;
 		clone.DefaultValue2 = DefaultValue2;
+		clone.Placeholder2 = Placeholder2;
 		clone.AD_Process_ID_Of_Panel = AD_Process_ID_Of_Panel;
 		clone.AD_Window_ID_Of_Panel = AD_Window_ID_Of_Panel;
 		clone.AD_Infowindow_ID = AD_Infowindow_ID;
@@ -907,7 +931,7 @@ public class GridFieldVO implements Serializable
 	public static class SeqNoComparator implements Comparator<GridFieldVO> {
 		@Override
 		public int compare(GridFieldVO gf1, GridFieldVO gf2) {
-			return (new Integer(gf1.SeqNo)).compareTo(new Integer(gf2.SeqNo));
+			return (Integer.valueOf(gf1.SeqNo)).compareTo(Integer.valueOf(gf2.SeqNo));
 		}
 	}
 
