@@ -32,6 +32,7 @@ import org.adempiere.base.event.EventManager;
 import org.compiere.util.CLogger;
 import org.compiere.util.DB;
 import org.compiere.util.Env;
+import org.compiere.util.Language;
 import org.compiere.util.Msg;
 import org.idempiere.distributed.IMessageService;
 import org.idempiere.distributed.ITopic;
@@ -150,7 +151,38 @@ public class MPInstance extends X_AD_PInstance
 		list.toArray(m_parameters);
 		return m_parameters;
 	}	//	getParameters
-
+	
+	/**
+	 * Validate that a set of process instance parameters are equal or not
+	 * to the current instance parameter
+	 * @param param array of parameters to compare
+	 * @return true if the process instance parameters are the same as the  array ones
+	 */
+	public boolean equalParameters(MPInstancePara[] params) {		
+		
+		//No parameters
+		if ((getParameters() == null || getParameters().length == 0) && (params == null || params.length == 0))
+				return true;
+		
+		//Different number of parameters
+		if (getParameters().length != params.length)
+			return false;
+		
+		int comparedParams = 0;
+		for (MPInstancePara instanceParameter : getParameters()) {
+			for (MPInstancePara para : params) {
+				if (instanceParameter.getParameterName().equals(para.getParameterName())) {
+					comparedParams++;
+					 if (!instanceParameter.equalParameter(para)) {
+						 return false;
+					 }
+					 break;
+				}
+			}
+		}
+		
+		return comparedParams == getParameters().length; //all the compared parameters have the same name and value 
+	}
 
 	/**	Log Entries					*/
 	private ArrayList<MPInstanceLog>	m_log	= new ArrayList<MPInstanceLog>();
@@ -219,8 +251,15 @@ public class MPInstance extends X_AD_PInstance
 		{
 			MRole role = MRole.get(getCtx(), AD_Role_ID);
 			Boolean access = role.getProcessAccess(AD_Process_ID);
-			if (access == null || !access.booleanValue())
-				throw new IllegalStateException(Msg.getMsg(getCtx(), "CannotAccessProcess", new Object[] {AD_Process_ID, role.getName()}));
+			if (access == null || !access.booleanValue()) {
+				MProcess proc = MProcess.get(getCtx(), AD_Process_ID);
+				StringBuilder procMsg = new StringBuilder("[");
+				if (! Language.isBaseLanguage (Env.getAD_Language(getCtx()))) {
+					procMsg.append(proc.get_Translation("Name")).append(" / ");
+				}
+				procMsg.append(proc.getName()).append("]");
+				throw new IllegalStateException(Msg.getMsg(getCtx(), "CannotAccessProcess", new Object[] {procMsg.toString(), role.getName()}));
+			}
 		}
 		super.setAD_Process_ID (AD_Process_ID);
 	}	//	setAD_Process_ID
@@ -237,7 +276,7 @@ public class MPInstance extends X_AD_PInstance
 			if (log.isLoggable(Level.INFO)) log.info("Set to 0 from " + Record_ID);
 			Record_ID = 0;
 		}
-		set_ValueNoCheck ("Record_ID", new Integer(Record_ID));
+		set_ValueNoCheck ("Record_ID", Integer.valueOf(Record_ID));
 	}	//	setRecord_ID
 
 	/**
