@@ -250,6 +250,7 @@ public class LayoutEngine implements Pageable, Printable, Doc
 	public void setPrintFormat (MPrintFormat format, boolean doLayout)
 	{
 		m_format = format;
+		this.colSuppressRepeats = null;
 		//	Initial & Default Settings
 		m_printCtx = new Properties(format.getCtx());
 
@@ -975,7 +976,9 @@ public class LayoutEngine implements Pageable, Printable, Doc
 		element.setLocation(ft);
 		m_headerFooter.addElement(element);
 		//
-		String s = MSysConfig.getValue(MSysConfig.ZK_FOOTER_SERVER_MSG, "@*Header@", Env.getAD_Client_ID(Env.getCtx()));
+		String s = MSysConfig.getValue(MSysConfig.ZK_FOOTER_SERVER_MSG, "", Env.getAD_Client_ID(Env.getCtx()));
+		if (Util.isEmpty(s, true))
+			s = "@*Header@";
 		element = new StringElement(s, font, color, null, true);
 		element.layout (m_footer.width, 0, true, MPrintFormatItem.FIELDALIGNMENTTYPE_Center);
 		element.setLocation(ft);
@@ -983,7 +986,7 @@ public class LayoutEngine implements Pageable, Printable, Doc
 		//
 		String timestamp = "";
 		s = MSysConfig.getValue(MSysConfig.ZK_FOOTER_SERVER_DATETIME_FORMAT, Env.getAD_Client_ID(Env.getCtx()));
-		if (!Util.isEmpty(s))
+		if (!Util.isEmpty(s, true))
 			timestamp = new SimpleDateFormat(s).format(System.currentTimeMillis());
 		else
 			timestamp = "@*CurrentDateTime@";
@@ -1231,7 +1234,7 @@ public class LayoutEngine implements Pageable, Printable, Doc
 		int AD_Column_ID = item.getAD_Column_ID();
 		if (log.isLoggable(Level.INFO)) log.info(format + " - Item=" + item.getName() + " (" + AD_Column_ID + ")");
 		//
-		Object obj = data.getNode(new Integer(AD_Column_ID));
+		Object obj = data.getNode(Integer.valueOf(AD_Column_ID));
 		//	Object obj = data.getNode(item.getColumnName());	//	slower
 		if (obj == null)
 		{
@@ -1265,7 +1268,7 @@ public class LayoutEngine implements Pageable, Printable, Doc
 			return null;
 		}
 		MQuery query = new MQuery (format.getAD_Table_ID());
-		query.addRestriction(item.getColumnName(), MQuery.EQUAL, new Integer(Record_ID));
+		query.addRestriction(item.getColumnName(), MQuery.EQUAL, Integer.valueOf(Record_ID));
 		format.setTranslationViewQuery(query);
 		if (log.isLoggable(Level.FINE))
 			log.fine(query.toString());
@@ -1374,7 +1377,7 @@ public class LayoutEngine implements Pageable, Printable, Doc
 		String FieldAlignmentType, boolean isForm)
 	{
 		//	Get Data
-		Object obj = m_data.getNode(new Integer(item.getAD_Column_ID()));
+		Object obj = m_data.getNode(Integer.valueOf(item.getAD_Column_ID()));
 		if (obj == null)
 			return null;
 		else if (obj instanceof PrintDataElement)
@@ -1494,7 +1497,7 @@ public class LayoutEngine implements Pageable, Printable, Doc
 	 */
 	private PrintElement createImageElement (MPrintFormatItem item, PrintData printData)
 	{
-		Object obj = printData.getNode(new Integer(item.getAD_Column_ID())); 
+		Object obj = printData.getNode(Integer.valueOf(item.getAD_Column_ID())); 
 		if (obj == null)
 			return null;
 		else if (obj instanceof PrintDataElement)
@@ -1533,7 +1536,7 @@ public class LayoutEngine implements Pageable, Printable, Doc
 	private PrintElement createBarcodeElement (MPrintFormatItem item, PrintData printData)
 	{
 		//	Get Data
-		Object obj = printData.getNode(new Integer(item.getAD_Column_ID()));
+		Object obj = printData.getNode(Integer.valueOf(item.getAD_Column_ID()));
 		if (obj == null)
 			return null;
 		else if (obj instanceof PrintDataElement)
@@ -1635,7 +1638,7 @@ public class LayoutEngine implements Pageable, Printable, Doc
 			{
 				if (item.isNextLine() && item.getBelowColumn() != 0)
 				{
-					additionalLines.put(new Integer(col), new Integer(item.getBelowColumn()-1));
+					additionalLines.put(Integer.valueOf(col), Integer.valueOf(item.getBelowColumn()-1));
 					if (!item.isSuppressNull())
 					{
 						item.setIsSuppressNull(true);	//	display size will be set to 0 in TableElement
@@ -1691,13 +1694,13 @@ public class LayoutEngine implements Pageable, Printable, Doc
 			printData.setRowIndex(row);
 			if (printData.isFunctionRow())
 			{
-				functionRows.add(new Integer(row));
+				functionRows.add(Integer.valueOf(row));
 				rowColFont.put(new Point(row, TableElement.ALL), tf.getFunct_Font());
 				rowColColor.put(new Point(row, TableElement.ALL), tf.getFunctFG_Color());
 				rowColBackground.put(new Point(row, TableElement.ALL), tf.getFunctBG_Color());
 				if (printData.isPageBreak())
 				{
-					pageBreak.add(new Integer(row));
+					pageBreak.add(Integer.valueOf(row));
 					if (log.isLoggable(Level.FINER))
 						log.finer("PageBreak row=" + row);
 				}
@@ -1752,7 +1755,7 @@ public class LayoutEngine implements Pageable, Printable, Doc
 					{
 						Object obj = null;
 						if (item.getAD_Column_ID() > 0) // teo_sarca, [ 1673542 ]
-							obj = printData.getNode(new Integer(item.getAD_Column_ID()));
+							obj = printData.getNode(Integer.valueOf(item.getAD_Column_ID()));
 						if (obj == null)
 							;
 						else if (obj instanceof PrintDataElement)
@@ -1995,6 +1998,8 @@ public class LayoutEngine implements Pageable, Printable, Doc
 	}
 
 	public static Boolean [] getColSuppressRepeats (MPrintFormat format){
+		if (format.isForm())
+			return null;
 		List<Boolean> colSuppressRepeats = new ArrayList<>();
 		for (int c = 0; c < format.getItemCount(); c++)
 		{
