@@ -33,6 +33,7 @@ import java.sql.Timestamp;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
 import java.util.logging.Level;
@@ -147,7 +148,7 @@ public final class DB
 		try
 		{
 			Class<?> clazz = Class.forName("org.compiere.MigrateData");
-			clazz.newInstance();
+			clazz.getDeclaredConstructor().newInstance();
 		}
 		catch (Exception e)
 		{
@@ -961,7 +962,7 @@ public final class DB
 	 */
 	public static int executeUpdate (String sql, int param, String trxName, int timeOut)
 	{
-		return executeUpdate (sql, new Object[]{new Integer(param)}, false, trxName, timeOut);
+		return executeUpdate (sql, new Object[]{Integer.valueOf(param)}, false, trxName, timeOut);
 	}	//	executeUpdate
 
 	/**
@@ -990,7 +991,7 @@ public final class DB
 	 */
 	public static int executeUpdate (String sql, int param, boolean ignoreError, String trxName, int timeOut)
 	{
-		return executeUpdate (sql, new Object[]{new Integer(param)}, ignoreError, trxName, timeOut);
+		return executeUpdate (sql, new Object[]{Integer.valueOf(param)}, ignoreError, trxName, timeOut);
 	}	//	executeUpdate
 
 	/**
@@ -1828,11 +1829,11 @@ public final class DB
 
 		if(SYSTEM_NATIVE_SEQUENCE && !adempiereSys)
 		{
-			int m_sequence_id = CConnection.get().getDatabase().getNextID(TableName+"_SQ");
+			int m_sequence_id = CConnection.get().getDatabase().getNextID(TableName+"_SQ", trxName);
 			if (m_sequence_id == -1) {
 				// try to create the sequence and try again
 				MSequence.createTableSequence(Env.getCtx(), TableName, trxName, true);
-				m_sequence_id = CConnection.get().getDatabase().getNextID(TableName+"_SQ");
+				m_sequence_id = CConnection.get().getDatabase().getNextID(TableName+"_SQ", trxName);
 			}
 			return m_sequence_id;
 		}
@@ -2114,6 +2115,15 @@ public final class DB
         } catch (SQLException e) {
             ;
         }
+    	if (readReplicaStatements.contains(st)) {
+			try {
+				DBReadReplica.closeReadReplicaStatement(st);
+			} catch (Exception e) {
+				;
+			} finally {
+				readReplicaStatements.remove(st);
+			}
+    	}
     }
 
     /**
@@ -2522,6 +2532,50 @@ public final class DB
     	if (rowsArray.size() == 0)
     		return null;
     	return rowsArray;
+	}
+
+	/**	Read Replica Statements List	*/
+	private static final List<PreparedStatement> readReplicaStatements = Collections.synchronizedList(new ArrayList<PreparedStatement>());
+
+	/**
+	 *	Prepare Read Replica Statement
+	 *  @param sql sql statement
+	 * 	@param trxName transaction
+	 *  @return Prepared Statement (from replica if possible, otherwise normal statement)
+	 */
+	public static PreparedStatement prepareNormalReadReplicaStatement(String sql, String trxName) {
+		int concurrency = ResultSet.CONCUR_READ_ONLY;
+		String upper = sql.toUpperCase();
+		if (upper.startsWith("UPDATE ") || upper.startsWith("DELETE "))
+			concurrency = ResultSet.CONCUR_UPDATABLE;
+		return prepareNormalReadReplicaStatement(sql, ResultSet.TYPE_FORWARD_ONLY, concurrency, trxName);
+	}
+
+	/**
+	 *	Prepare Read Replica Statement
+	 *  @param sql sql statement
+	 *  @param resultSetType - ResultSet.TYPE_FORWARD_ONLY, ResultSet.TYPE_SCROLL_INSENSITIVE, ResultSet.TYPE_SCROLL_SENSITIVE
+	 *  @param resultSetConcurrency - ResultSet.CONCUR_READ_ONLY or ResultSet.CONCUR_UPDATABLE
+	 * 	@param trxName transaction name
+	 *  @return Prepared Statement (from replica if possible, otherwise normal statement)
+	 */
+	private static PreparedStatement prepareNormalReadReplicaStatement(String sql, int resultSetType, int resultSetConcurrency, String trxName) {
+		if (sql == null || sql.length() == 0)
+			throw new IllegalArgumentException("No SQL");
+		boolean useReadReplica = MSysConfig.getValue(MSysConfig.DB_READ_REPLICA_URLS) != null;
+		if (   trxName == null
+			&& useReadReplica
+			&& resultSetType == ResultSet.TYPE_FORWARD_ONLY
+			&& resultSetConcurrency == ResultSet.CONCUR_READ_ONLY) {
+			// this is a candidate for a read replica connection (read-only, forward-only, no-trx), try to obtain one, otherwise fallback to normal
+			PreparedStatement stmt = DBReadReplica.prepareNormalReadReplicaStatement(sql, resultSetType, resultSetConcurrency, trxName);
+			if (stmt != null) {
+				readReplicaStatements.add(stmt);
+				return stmt;
+			}
+		}
+		//
+		return ProxyFactory.newCPreparedStatement(resultSetType, resultSetConcurrency, sql, trxName);
 	}
 
 }	//	DB
