@@ -24,6 +24,7 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.logging.Level;
 
+import org.adempiere.webui.ClientInfo;
 import org.adempiere.webui.LayoutUtils;
 import org.adempiere.webui.ValuePreference;
 import org.adempiere.webui.apps.AEnv;
@@ -33,6 +34,7 @@ import org.adempiere.webui.event.ContextMenuListener;
 import org.adempiere.webui.event.DialogEvents;
 import org.adempiere.webui.event.ValueChangeEvent;
 import org.adempiere.webui.theme.ThemeManager;
+import org.adempiere.webui.util.ZKUpdateUtil;
 import org.adempiere.webui.window.WFieldRecordInfo;
 import org.adempiere.webui.window.WLocatorDialog;
 import org.compiere.model.GridField;
@@ -94,7 +96,10 @@ public class WLocatorEditor extends WEditor implements EventListener<Event>, Pro
 		
 		setColumnName(columnName);
 		m_mLocator = mLocator;
-		getComponent().setButtonImage(ThemeManager.getThemeResource("images/Locator16.png"));
+		if (ThemeManager.isUseFontIconForImage())
+			getComponent().getButton().setIconSclass("z-icon-Locator");
+		else
+			getComponent().setButtonImage(ThemeManager.getThemeResource("images/Locator16.png"));
 		getComponent().getTextbox().setReadonly(true);
 
 		m_WindowNo = windowNo;	//Yvonne: move it b4 setDefault_Locator_ID()
@@ -108,7 +113,10 @@ public class WLocatorEditor extends WEditor implements EventListener<Event>, Pro
 		super(new EditorBox(), gridField);
 		m_mLocator = (MLocatorLookup)gridField.getLookup();
 		
-		getComponent().setButtonImage(ThemeManager.getThemeResource("images/Locator16.png"));
+		if (ThemeManager.isUseFontIconForImage())
+			getComponent().getButton().setIconSclass("z-icon-Locator");
+		else
+			getComponent().setButtonImage(ThemeManager.getThemeResource("images/Locator16.png"));
 		getComponent().getTextbox().setReadonly(true);
 		
 		setDefault_Locator_ID(); // set default locator, teo_sarca [ 1661546 ]
@@ -119,6 +127,7 @@ public class WLocatorEditor extends WEditor implements EventListener<Event>, Pro
         {
         	popupMenu = new WEditorPopupMenu(true, true, isShowPreference());
         	addChangeLogMenu(popupMenu);
+        	getComponent().getTextbox().setPlaceholder(gridField.getPlaceholder());
         }					
 	}
 
@@ -255,6 +264,25 @@ public class WLocatorEditor extends WEditor implements EventListener<Event>, Pro
 			//	display
 			ld.setTitle(null);
 			LayoutUtils.openPopupWindow(getComponent(), ld);
+			if (ClientInfo.isMobile())
+    		{
+            	ld.setAttribute("mobile.orientation", ClientInfo.get().orientation);
+    			ClientInfo.onClientInfo(ld, () -> {
+    				if (ld.getPage() != null) {
+    					String orientation = (String) ld.getAttribute("mobile.orientation");
+    					String newOrientation = ClientInfo.get().orientation;
+    					if (!newOrientation.equals(orientation)) {
+    						ld.setAttribute("mobile.orientation", newOrientation);
+    						
+    						ZKUpdateUtil.setCSSHeight(ld);
+    						ZKUpdateUtil.setCSSWidth(ld);    						
+    						ld.invalidate();
+    						LayoutUtils.openPopupWindow(getComponent(), ld, 100);
+    						
+    					}	    				
+    				}
+    			});
+    		}
 		}
 	}
 	
@@ -399,7 +427,7 @@ public class WLocatorEditor extends WEditor implements EventListener<Event>, Pro
 		if (M_Locator_ID == 0)
 			return false;
 
-		setValue (new Integer(M_Locator_ID), true);
+		setValue (Integer.valueOf(M_Locator_ID), true);
 		return true;
 	} // actionText
 	
