@@ -11,6 +11,7 @@ import java.util.ArrayList;
 import java.util.Vector;
 import java.util.logging.Level;
 
+import org.adempiere.webui.ClientInfo;
 import org.adempiere.webui.component.Borderlayout;
 import org.adempiere.webui.component.Button;
 import org.adempiere.webui.component.Checkbox;
@@ -375,6 +376,11 @@ public class InfoProductWindow extends InfoWindow {
 			}
 		});
 		south.setSclass("south-collapsible-with-title");
+		if (ClientInfo.maxHeight(ClientInfo.MEDIUM_HEIGHT-1))
+		{
+			south.setOpen(false);
+			ZKUpdateUtil.setHeight(south, "100%");
+		}
 		contentBorderLayout.appendChild(south);
 		tabbedPane.setSclass("info-product-tabbedpane");
 		south.appendChild(tabbedPane);
@@ -399,7 +405,8 @@ public class InfoProductWindow extends InfoWindow {
 						for(int i = 0; i < columnInfos.length; i++) {
 							if (columnInfos[i].getGridField() != null && columnInfos[i].getGridField().getColumnName().equals("Value")) {
 								refresh(M_Warehouse_ID, M_PriceList_Version_ID);
-			        			contentBorderLayout.getSouth().setOpen(true);
+							if (ClientInfo.minHeight(ClientInfo.MEDIUM_HEIGHT))
+								contentBorderLayout.getSouth().setOpen(true);
 			        			break;
 							}
 						}
@@ -851,10 +858,10 @@ public class InfoProductWindow extends InfoWindow {
 				line.add(null);							//  Date
 				double qtyOnHand = rs.getDouble(1);
 				qty += qtyOnHand;
-				line.add(new Double(qtyOnHand));  		//  Qty
+				line.add(Double.valueOf(qtyOnHand));  		//  Qty
 				line.add(null);							//  BPartner
-				line.add(new Double(rs.getDouble(3)));  //  QtyOrdered
-				line.add(new Double(rs.getDouble(2)));  //  QtyReserved
+				line.add(Double.valueOf(rs.getDouble(3)));  //  QtyOrdered
+				line.add(Double.valueOf(rs.getDouble(2)));  //  QtyReserved
 				line.add(rs.getString(7));      		//  Locator
 				String asi = rs.getString(4);
 				if (showDetail && (asi == null || asi.length() == 0))
@@ -960,15 +967,15 @@ public class InfoProductWindow extends InfoWindow {
 				Double qtyOrdered = null;
 				if (MDocType.DOCBASETYPE_PurchaseOrder.equals(DocBaseType))
 				{
-					qtyOrdered = new Double(oq);
+					qtyOrdered = Double.valueOf(oq);
 					qty += oq;
 				}
 				else
 				{
-					qtyReserved = new Double(oq);
+					qtyReserved = Double.valueOf(oq);
 					qty -= oq;
 				}
-				line.add(new Double(qty)); 		 		//  Qty
+				line.add(Double.valueOf(qty)); 		 		//  Qty
 				line.add(rs.getString(6));				//  BPartner
 				line.add(qtyOrdered);					//  QtyOrdered
 				line.add(qtyReserved);					//  QtyReserved
